<resources>
    <string name="app_name">buzzWire</string>
    <string name="ek_img_content">ExportKit Image</string>
    <string name="button_string">Start</string>
    <string name="button_ek1_string">Rankings</string>
    <string name="button_ek2_string">Settings</string>
    <string name="buzz_wire_string">BUZZ WIRE</string>
    <string name="gamebackground_1">gamebackground</string>
    <string name="loading">Loading…</string>
    <string name="no_internet_connection">No internet connection!</string>
    <string name="lbl_switch_player">Switch PLayer</string>
    <string name="lbl_seconds">Seconds</string>
    <string name="lbl_start">Start</string>
    <string name="lbl_back">BACK</string>
    <string name="lbl_with_remaining">With Remaining</string>
    <string name="lbl_2">2.</string>
    <string name="lbl_3">3.</string>
    <string name="lbl_4">4.</string>
    <string name="msg_you_touch_the_w">YOU TOUCH THE WIRE </string>
    <string name="lbl_5">5.</string>
    <string name="lbl_rankings">Rankings</string>
    <string name="msg_top_2_record_br">Top 2 Record Break</string>
    <string name="lbl_player">Player</string>
    <string name="lbl_buzz_wire">BUZZ WIRE</string>
    <string name="msg_top_4_record_br">Top 4 Record Break</string>
    <string name="lbl_reset_game">Reset Game</string>
    <string name="lbl_enter">Enter</string>
    <string name="lbl_00_00">00:00</string>
    <string name="lbl_00002">0000</string>
    <string name="msg_top_3_record_br">Top 3 Record Break</string>
    <string name="lbl_reset_rankings">Reset Rankings</string>
    <string name="msg_top_1_record_br">Top 1 Record Break</string>
    <string name="lbl_settings">Settings</string>
    <string name="msg_ohh_noo_you_r">OHH Noo!!
  YOU REACH THE TIME LIMIT</string>
    <string name="msg_top_5_record_br">Top 5 Record Break</string>
    <string name="msg_congratulations">Congratulations You Finish The Maze</string>
    <string name="lbl_player_name">Player Name</string>
    <string name="lbl_change_time">Change Time</string>
    <string name="enter">Enter</string>
    <string name="playerNameEnter">Enter</string>
    <string name="playerNameEnter1">Enter</string>
    <string name="start">Start</string>
    <string name="rankings">Rankings</string>
    <string name="settings">Settings</string>
    <string name="back">Back</string>
    <string name="set_time">Set Time</string>
    <string name="countdownNumber">00:00</string>
    <string name="game_start">Game Start</string>
    <string name="finish">Finish</string>
    <string name="reset">Reset Game</string>
    <string name="finishGame">Loop Finish</string>
    <string name="rankingsText">Rankings</string>
    <string name="reset_rankings">Reset Rankings</string>
    <string name="rank1Number">1.</string>
    <string name="rank2Number">2.</string>
    <string name="rank3Number">3.</string>
    <string name="rank4Number">4.</string>
    <string name="rank5Number">5.</string>
    <string name="playerRank">Player</string>
    <string name="switch_player">Switch Player</string>
    <string name="reset_game">Reset Game</string>
    <string name="you_break_a_record">You Break A Record</string>
    <string name="game_over">Game Over</string>
</resources>