<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gamebackground_1"
    tools:context=".finishMaze">

    <TextView
        android:id="@+id/buzz_wire"
        android:layout_width="296dp"
        android:layout_height="150dp"
        android:layout_gravity="center_horizontal|center"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:gravity="center"
        android:shadowColor="#000000"
        android:shadowDx="0"
        android:shadowDy="4"
        android:shadowRadius="4"
        android:text="@string/msg_congratulations"
        android:textColor="@color/_bg___button_container_ek1_color"
        android:textSize="25sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="TextSizeCheck" />

    <TextView
        android:id="@+id/timeRemaining"
        android:layout_width="286dp"
        android:layout_height="59dp"
        android:layout_gravity="center_horizontal|center"
        android:layout_marginStart="20dp"
        android:layout_marginTop="172dp"
        android:gravity="center"
        android:shadowColor="#000000"
        android:shadowDx="0"
        android:shadowDy="4"
        android:shadowRadius="4"
        android:text="@string/lbl_with_remaining"
        android:textColor="@color/white"
        android:textSize="25sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="TextSizeCheck" />

    <TextView
        android:id="@+id/txtSeconds"
        android:layout_width="165dp"
        android:layout_height="55dp"
        android:layout_gravity="center_horizontal|center"
        android:layout_marginStart="144dp"
        android:layout_marginTop="252dp"
        android:gravity="center"
        android:shadowColor="#000000"
        android:shadowDx="0"
        android:shadowDy="4"
        android:shadowRadius="4"
        android:text="@string/lbl_seconds"
        android:textColor="@color/white"
        android:textSize="25sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="TextSizeCheck" />

    <TextView
        android:id="@+id/numSeconds"
        android:layout_width="93dp"
        android:layout_height="56dp"
        android:layout_gravity="center_horizontal|center"
        android:layout_marginStart="40dp"
        android:layout_marginTop="252dp"
        android:gravity="center"
        android:shadowColor="#000000"
        android:shadowDx="0"
        android:shadowDy="4"
        android:shadowRadius="4"
        android:text="@string/lbl_00002"
        android:textColor="@color/white"
        android:textSize="25sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="TextSizeCheck" />

    <Button
        android:id="@+id/buttonSwitchPlayer"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="50dp"
        android:layout_marginTop="456dp"
        android:background="@drawable/_bg___button_container_ek3_shape"
        android:text="@string/switch_player"
        android:textAllCaps="false"
        android:textColor="@color/buttonEnter"
        android:textSize="15sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.554"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/buttonResetGame"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="50dp"
        android:layout_marginTop="396dp"
        android:background="@drawable/_bg___button_container_ek3_shape"
        android:text="@string/reset_game"
        android:textAllCaps="false"
        android:textColor="@color/buttonEnter"
        android:textSize="15sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.504"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/buttonRankings2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="50dp"
        android:layout_marginTop="336dp"
        android:background="@drawable/_bg___button_container_ek3_shape"
        android:text="@string/lbl_rankings"
        android:textAllCaps="false"
        android:textColor="@color/buttonEnter"
        android:textSize="15sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.504"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>