<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gamebackground_1"
    tools:context=".gameOnStart">

    <TextView
        android:id="@+id/buzz_wire"
        android:layout_width="179.4dp"
        android:layout_height="147.4dp"
        android:layout_gravity="center_horizontal|center"
        android:layout_marginStart="80dp"
        android:layout_marginTop="104dp"
        android:gravity="center"
        android:shadowColor="#000000"
        android:shadowDx="0"
        android:shadowDy="4"
        android:shadowRadius="4"
        android:text="@string/buzz_wire_string"
        android:textColor="@color/_bg___button_container_ek1_color"
        android:textSize="32sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="TextSizeCheck" />


    <Button
        android:id="@+id/buttonFinish"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="50dp"
        android:layout_marginTop="368dp"
        android:background="@drawable/_bg___button_container_ek3_shape"
        android:text="@string/finish"
        android:textAllCaps="false"
        android:textColor="@color/buttonEnter"
        android:textSize="15sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.504"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/buttonReset"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="50dp"
        android:layout_marginTop="440dp"
        android:background="@drawable/_bg___button_container_ek3_shape"
        android:text="@string/reset"
        android:textAllCaps="false"
        android:textColor="@color/buttonEnter"
        android:textSize="15sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.504"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <TextView
        android:id="@+id/setCountdown"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal|center"
        android:layout_marginStart="36dp"
        android:layout_marginTop="256dp"
        android:autofillHints=""
        android:ellipsize="end"
        android:ems="3"
        android:gravity="center"
        android:singleLine="true"
        android:text="@string/countdownNumber"
        android:textColor="@color/_bg___button_container_ek1_color"
        android:textSize="45sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="LabelFor" />

</androidx.constraintlayout.widget.ConstraintLayout>