<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gamebackground_1"
    tools:context=".TimeSettings">


    <TextView
        android:id="@+id/buzz_wire"
        android:layout_width="179.4dp"
        android:layout_height="147.4dp"
        android:layout_gravity="center_horizontal|center"
        android:layout_marginStart="68dp"
        android:layout_marginTop="76dp"
        android:gravity="center"
        android:shadowColor="#000000"
        android:shadowDx="0"
        android:shadowDy="4"
        android:shadowRadius="4"
        android:text="@string/buzz_wire_string"
        android:textColor="@color/_bg___button_container_ek1_color"
        android:textSize="32sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="TextSizeCheck" />

    <Button
        android:id="@+id/buttonSetTime"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="50dp"
        android:layout_marginTop="428dp"
        android:background="@drawable/_bg___button_container_ek3_shape"
        android:text="@string/set_time"
        android:textAllCaps="false"
        android:textColor="@color/buttonEnter"
        android:textSize="15sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.504"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/buttonBack"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="10dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/_bg___button_container_ek3_shape"
        android:text="@string/back"
        android:textAllCaps="false"
        android:textColor="@color/buttonEnter"
        android:textSize="11sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <EditText
        android:id="@+id/setCountdown"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal|center"
        android:layout_marginStart="44dp"
        android:layout_marginTop="244dp"
        android:autofillHints=""
        android:ellipsize="end"
        android:ems="3"
        android:gravity="center"
        android:inputType="time"
        android:singleLine="true"
        android:text="@string/countdownNumber"
        android:textColor="@color/_bg___button_container_ek1_color"
        android:textSize="45sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="LabelFor" />


</androidx.constraintlayout.widget.ConstraintLayout>